# Korabli-chatrans

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  websockets.html
.github/: dependabot.yml
.github/workflows/: release.yml  rust.yml
chatrans/: Cargo.toml
chatrans/src/: lib.rs  main.rs
chatrans/src/interpreter/: aliyun_cli.rs  interpreter.rs  mod.rs
chatrans/src/live/: live.rs  mod.rs  parser.rs
chatrans/src/processor/: mod.rs  processor.rs
chatrans/src/server/: mod.rs  server.rs
docs/: README_CN.md
parser/: Cargo.toml
parser/src/: error.rs  korabli_replay.rs  lib.rs  packet2.rs  version.rs
parser/src/analyzer/: analyzer.rs  chat.rs  decoder.rs  mod.rs
parser/src/rpc/: entitydefs.rs
versions/13.1.0/scripts/: components.xml
versions/13.1.0/scripts/component_defs/: DivisionComponent.def  DynamicDivisionComponent.def  TrainingRoomComponent.def
versions/13.1.0/scripts/entity_defs/: Account.def  Avatar.def  BattleLogic.def  Vehicle.def  alias.xml
versions/13.1.0/scripts/user_data_object_defs/: MapBorder.def
