[package]
name = "chatrans"
version = "0.1.1"
authors = ["Yusux <syusux@gmail.com>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
replay-parser = { version = "0.1.1", path = "../parser" }
clap = { version = "4.5.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.79"
notify = "6.1.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tokio-util = "0.7.10"
tokio-tungstenite = "0.21.0"
futures-util = "0.3.30"
async-broadcast = "0.7.0"
async-channel = "2.2.0"
md-5 = "0.10.6"
base64 = "0.21.7"
reqwest = "0.11.24"
sha1 = "0.10.6"
hmac = "0.12.1"
chrono = "0.4.34"
url = "2.5.0"

[dependencies.uuid]
version = "1.7.0"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
]

[dependencies.tokio]
version = "1.36.0"
features = [
    "rt",
    "net",
    "time",
    "macros",
    "signal",
]
