[package]
name = "replay-parser"
version = "0.1.1"
authors = ["Lane Kolbly <lane@rscheme.org>", "Yusux <syusux@gmail.com>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
hexdump = "0.1.1"
flate2 = "1.0.28"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
thiserror = "2.0.9"
roxmltree = "0.19.0"
serde-pickle = "1.1.1"
rust-embed = "8.3.0"
bitreader = "0.3.8"
modular-bitfield = "0.11.2"
tracing = "0.1.40"
